compiler/tests/en/errors/default_arg_order.salam
// EXPECT: E064
func bad(a : int = 1, b : int):
    ret a + b
end

func main:
    println(bad(2, 3))
end
